syntax="proto3";

package sum;
option java_package="com.proto.sum";
option java_multiple_files=true;

message SumRequest{
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse{
  int32 result = 1;
}

message SqrtRequest{
  int32 number = 1;
}

message SqrtResponse{
  double result = 1;
}
service SumService{
  rpc sum(SumRequest) returns (SumResponse);
}

service SqrtService{
  rpc sqrt(SqrtRequest) returns (SqrtResponse);
}